--- a/app/src/main/res/layout/item_mh.xml
+++ b/app/src/main/res/layout/item_mh.xml
@@ -2,7 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:foreground="?attr/selectableItemBackground">
+
+
+    <ImageView
+        android:id="@+id/imageView_item"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:scaleType="centerCrop"
+        android:transitionName="image"/>
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/loadingIndicator_item"
@@ -11,12 +20,6 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         app:indicatorColor="@color/accent"
-        app:indicatorName="BallScaleMultipleIndicator"/>
+        app:indicatorName="LineScalePulseOutIndicator"/>
 
-    <ImageView
-        android:transitionName="image"
-        android:id="@+id/imageView_item"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:scaleType="centerCrop"/>
 </RelativeLayout>
