--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -68,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_wallpaper_white_18dp"
-            fab:fab_label="Set Wallpaper"
+            fab:fab_label="Set As Wallpaper"
             fab:fab_size="normal"/>
 
     </com.github.clans.fab.FloatingActionMenu>
