--- a/app/src/main/res/layout/fragment_mh.xml
+++ b/app/src/main/res/layout/fragment_mh.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:background="#fff"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/coordinatorLayout_fragment_mh"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#fff"
+    android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView_fragment_mh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
