--- a/app/src/main/res/layout/item_mh.xml
+++ b/app/src/main/res/layout/item_mh.xml
@@ -22,4 +22,12 @@
         app:indicatorColor="@color/accent"
         app:indicatorName="LineScalePulseOutIndicator"/>
 
+    <com.eftimoff.androipathview.PathView
+        android:visibility="gone"
+        android:id="@+id/pathView_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
+
 </RelativeLayout>
