--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory
-        android:title="Muzei">
-        <Preference
-            android:title="Sync Time"/>
-        <Preference
-            android:title="Category"/>
-    </PreferenceCategory>
+    <com.sorcererxw.matthiasheiderichphotography.ui.views.Preference.TypefacePreferenceCategory
+        android:key="KEY_MUZEI_GROUP"
+        android:title="Muzei Live Wallpaper">
+        <com.sorcererxw.matthiasheiderichphotography.ui.views.Preference.TypefacePreference
+            android:key="KEY_MUZEI_ROTATE_TIME"
+            android:title="Rotate time"/>
+        <com.sorcererxw.matthiasheiderichphotography.ui.views.Preference.TypefacePreference
+            android:key="KEY_MUZEI_ROTATE_CATEGORY"
+            android:title="Rotate category"/>
+        <com.sorcererxw.matthiasheiderichphotography.ui.views.Preference.TypefaceCheckBoxPreference
+            android:key="KEY_MUZEI_ROTATE_ONLY_WIFI"
+            android:title="Rotate only in WiFi"/>
+        <com.sorcererxw.matthiasheiderichphotography.ui.views.Preference.TypefacePreference
+            android:summary="If you want lasting stability Muzei service, please do not let this the system or third-party tools kill this application or Muzei application."
+            android:title="Tips"/>
+    </com.sorcererxw.matthiasheiderichphotography.ui.views.Preference.TypefacePreferenceCategory>
 </PreferenceScreen>
