--- a/app/src/main/res/layout/item_library.xml
+++ b/app/src/main/res/layout/item_library.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:background="#EEE">
+        android:background="@color/colorLibCopyrightBackground">
 
         <TextView
             android:id="@+id/textView_item_library_licence"
