--- a/app/src/main/res/layout/item_mh.xml
+++ b/app/src/main/res/layout/item_mh.xml
@@ -24,7 +24,7 @@
 
     <com.eftimoff.androipathview.PathView
         app:svg="@raw/love"
-        app:pathColor="#fff"
+        app:pathColor="@color/colorPathView"
         android:alpha="0"
         android:id="@+id/pathView_item"
         android:layout_width="100dp"
