--- a/app/src/main/res/layout/layout_drawer_head.xml
+++ b/app/src/main/res/layout/layout_drawer_head.xml
@@ -11,5 +11,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:textColor="#000"/>
+        android:textColor="@color/colorDrawerHeadLogo"/>
 </RelativeLayout>
