--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,6 +5,7 @@
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinatorLayout_detail"
+    android:background="?attr/colorImagePlaceHolder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.sorcererxw.matthiasheiderichphotography.ui.activities.DetailActivity">
@@ -29,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
-        app:indicatorColor="@color/accent"
+        app:indicatorColor="?attr/colorAccent"
         app:indicatorName="LineScalePulseOutIndicator"/>
 
     <uk.co.senab.photoview.PhotoView
