--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <com.sorcererxw.matthiasheiderichphotography.ui.views.Preferences.TypefacePreferenceCategory
+    <com.sorcererxw.typefaceviews.preferences.TypefacePreferenceCategory
         android:key="KEY_MUZEI_GROUP"
         android:title="Muzei Live Wallpaper">
-        <com.sorcererxw.matthiasheiderichphotography.ui.views.Preferences.TypefacePreference
+        <com.sorcererxw.typefaceviews.preferences.TypefacePreference
             android:key="KEY_MUZEI_ROTATE_TIME"
             android:title="Rotate Time"/>
-        <com.sorcererxw.matthiasheiderichphotography.ui.views.Preferences.TypefacePreference
+        <com.sorcererxw.typefaceviews.preferences.TypefacePreference
             android:key="KEY_MUZEI_ROTATE_CATEGORY"
             android:title="Rotate Category"/>
-        <com.sorcererxw.matthiasheiderichphotography.ui.views.Preferences.TypefaceCheckBoxPreference
+        <com.sorcererxw.typefaceviews.preferences.TypefaceCheckBoxPreference
             android:key="KEY_MUZEI_ROTATE_ONLY_WIFI"
             android:title="Rotate Only in WiFi"/>
-        <com.sorcererxw.matthiasheiderichphotography.ui.views.Preferences.TypefacePreference
+        <com.sorcererxw.typefaceviews.preferences.TypefacePreference
             android:summary="If you want lasting stability Muzei service, please do not let this the system or third-party tools kill this application or Muzei application."
             android:title="Tips"/>
-    </com.sorcererxw.matthiasheiderichphotography.ui.views.Preferences.TypefacePreferenceCategory>
+    </com.sorcererxw.typefaceviews.preferences.TypefacePreferenceCategory>
 
-    <com.sorcererxw.matthiasheiderichphotography.ui.views.Preferences.TypefacePreferenceCategory
+    <com.sorcererxw.typefaceviews.preferences.TypefacePreferenceCategory
         android:title="Theme">
-        <com.sorcererxw.matthiasheiderichphotography.ui.views.Preferences.TypefaceSwitchPreference
+        <com.sorcererxw.typefaceviews.preferences.TypefaceSwitchPreference
             android:key="KEY_THEME_NIGHT_MODE"
             android:title="Night Mode (experiment)"/>
-    </com.sorcererxw.matthiasheiderichphotography.ui.views.Preferences.TypefacePreferenceCategory>
+    </com.sorcererxw.typefaceviews.preferences.TypefacePreferenceCategory>
 
 </PreferenceScreen>
