--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -15,7 +15,7 @@
         android:layout_height="0dp"
         android:fitsSystemWindows="true"/>
 
-    <com.sorcererxw.matthiasheiderichphotography.ui.views.TypefaceToolbar
+    <com.sorcererxw.typefaceviews.TypefaceToolbar
         android:id="@+id/toolbar_detail"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
