--- a/app/src/main/res/layout/item_mh.xml
+++ b/app/src/main/res/layout/item_mh.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        app:indicatorColor="@color/accent"
+        app:indicatorColor="?android:attr/colorAccent"
         app:indicatorName="LineScalePulseOutIndicator"/>
 
     <com.eftimoff.androipathview.PathView
