--- a/app/src/main/res/layout/sheet_file_picker.xml
+++ b/app/src/main/res/layout/sheet_file_picker.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/colorBackground"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/relativeLayout_file_picker_sheet_root"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+    <com.sorcererxw.typefaceviews.widgets.TypefaceToolbar
+        android:id="@+id/toolbar_file_picker_sheet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView_sheet_file_picker"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbar_file_picker_sheet"/>
+</RelativeLayout>
