--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -1,3 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shortcuts>
+<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
+    <shortcut
+        android:enabled="true"
+        android:icon="@drawable/ic_shortcut_lucky"
+        android:shortcutDisabledMessage="@string/shortcuts_getting_lucky_disable_message"
+        android:shortcutId="getting lucky"
+        android:shortcutLongLabel="@string/shortcuts_getting_lucky_long_label"
+        android:shortcutShortLabel="@string/shortcuts_getting_lucky_short_label">
+        <intent
+            android:action="lucky"
+            android:targetClass="com.sorcererxw.matthiasheiderichphotography.ui.activities.ShortcutActivity"
+            android:targetPackage="com.sorcererxw.matthiasheiderichphotography"/>
+        <categories android:name="android.shortcut.conversation"/>
+    </shortcut>
 </shortcuts>
