--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?android:attr/colorPrimaryDark"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
-    android:background="?android:attr/colorBackground"
+    android:id="@+id/linearLayout_main_root"
     tools:context="com.sorcererxw.matthiasheiderichphotography.ui.activities.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <com.sorcererxw.typefaceviews.widgets.TypefaceToolbar
